// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Input masked 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <input
      class="form-control"
      id="11"
      placeholder=""
      type="text"
      value=""
    />
    Some error
  </div>
</div>
`;

exports[`Component: Input ui addon default 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <div
      class="input-group"
    >
      Default on the left
      <input
        class="form-control"
        id="6"
        placeholder=""
        type="text"
        value=""
      />
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: Input ui default 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <input
      class="form-control"
      id="1"
      placeholder=""
      type="text"
      value=""
    />
    Some error
  </div>
</div>
`;

exports[`Component: Input ui with label 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <label
      class="form-label"
      for="firstName"
    >
      First name
    </label>
    <input
      class="form-control"
      id="firstName"
      placeholder=""
      type="text"
      value=""
    />
    Some error
  </div>
</div>
`;

exports[`reactStrapInput 1`] = `
<div>
  <input
    class="form-control"
    id="10"
    type="text"
  />
</div>
`;
